# Colearni

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  arxiv_org.md  arxiv_org_1.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml
.codex/environments/: environment.toml
.vite/vitest/: results.json
adapters/db/: __init__.py  auth.py  chat.py  chunks.py  chunks_repository.py  dependencies.py  documents.py  engine.py  graph_repository.py  knowledge_base.py  mastery.py  research.py  session.py  workspaces.py
adapters/embeddings/: __init__.py  factory.py  litellm_provider.py  mock_provider.py  openai_provider.py
adapters/llm/: __init__.py  factory.py  providers.py
adapters/parsers/: __init__.py  chunker.py  text.py
apps/api/: dependencies.py  main.py  middleware.py
apps/jobs/: __init__.py  backfill_chunk_embeddings.py  graph_gardener.py  learner_digest.py  quiz_gardener.py  readiness_analyzer.py  research_digest.py  research_runner.py
apps/web/: .env.example  README.md  eslint.config.mjs  next.config.mjs  package.json  tsconfig.tsbuildinfo  vitest.config.ts
archived_colearni/: .gitmodules  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh
archived_colearni/ProgressTracking/: entry5jun.md
archived_colearni/frontend/: index.html
archived_colearni/knowledgeBase/: __init__.py
archived_colearni/knowledgeSearchingAgent/: agent.py  prompt.py  web_crawler.py
archived_colearni/knowledgeSearchingAgent/subagents/: __init__.py  googleSearchAgent.py  knowledgeExtractorAgent.py  knowledgeFinderAgent.py  knowledgeIngestionAgent.py  prompts.py  quizGeneratorAgent.py  reviewerAgent.py  searxngSearchAgent.py  userProfileUpdateAgent.py
colearni_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core/: __init__.py  agent_loop.py  contracts.py  health.py  ingestion.py  llm_messages.py  llm_schemas.py  llm_trimming.py  observability.py  rate_limiter.py  schemas.py  settings.py  tokenization.py  tools.py  verifier.py
core/prompting/: __init__.py  loader.py  models.py  registry.py  renderer.py
core/schemas/: __init__.py  assistant.py  chat.py  graph.py  knowledge_base.py  practice.py  quizzes.py  research.py  tutor_state.py  workspaces.py
docs/: AGENTIC_MASTER_PLAN.md  AGENTS_DESIGN.md  API.md  ARCHITECTURE.md  AU_PORT_BACKLOG.md  CODEBLOCKFIX_PLAN.md  CODEX.md  CREF_MASTER_PLAN.md  DRIFT_REPORT.md  FRONTEND.md  FUTURE_FREEFORM_MULTI_AGENT.md  GENERATION_STATUS_PLAN.md  GRAPH.md  GraphNodeDesign.md  HIERARCHY_MASTER_PLAN.md  NEXT_SESSION_PROMPT.md  OBSERVABILITY.md  OBSERVABILITY_REFACTOR_PLAN.md  OBS_IMPROVEMENT_PLAN.md  OCR_MASTER_PLAN.md  PLAN.md  PRODUCT_SPEC.md  PROGRESS.md  PROMPTS.md  PR_PROMPTS.md  REFACTOR.md  REFACTOR_PLAN.md  REFERENCE_PROMPTS.md  REPO_HEALTH_REPORT.md  UPDATE_FE_PACKAGE.md  UX_OVERHAUL_MASTER_PLAN.md  WOW_PROGRESS.md  lightrag-graph-porting-guide.md
docs/agentic/: 01_conductor_plan.md  02_evidence_plan.md  03_stream_sync_plan.md  04_learner_model_plan.md  05_research_plan.md  06_background_eval_plan.md
docs/archive/: 2026-03-01-practice-memory-robustness-snapshot.md  AGENTIC_MASTER_PLAN.md  CODEBLOCKFIX_PLAN.md  CODEBLOCKFIX_PLAN_2026-02-28_pre-rewrite.md  CUR_SESSION_REPORTING.md  GENERATION_STATUS_PLAN.md  GRAPH_UX_POLISH_PLAN.md  LANDING_AUTH_PLAN.md  (+19 more)
knowledgeSearchingAgent/: agent.py  web_crawler.py
scripts/: db_reset.py  phoenix_trace_audit.py  start-app.sh  start-infra.sh  verify_stream.sh
(+462 files in other folders)
