[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colearni-backend"
version = "0.1.0"
description = "Minimal backend scaffold for Colearni"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "litellm>=1.81.0,<2.0.0",
    "openai>=1.30.0,<3.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.36.0,<2.0.0",
    "opentelemetry-sdk>=1.36.0,<2.0.0",
    "pgvector>=0.3.6,<1.0.0",
    "pypdf>=6.0.0,<7.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "email-validator>=2.0.0,<3.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "sqlalchemy>=2.0.35,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.6.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["adapters*", "apps*", "core*", "domain*", "scripts*"]
exclude = ["apps.web*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
